# lightcurvedb

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  docker-compose.yml  generate_schema.py  install.sh  metrics.txt  noxfile.py  pdo_user_install.sh  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  setup.py  testrequirements.txt  tox.ini
.github/workflows/: commitlint.yml  docs.yml  release.yml  test.yml
alembic/: env.py
alembic/versions/: 00e0b834d97c_.py  00e0b834d97c_cadence_change.py  08f0bdc317cf_altering_bjd_column.py  0f8bba88ab28_adding_bls_unique_constraint_by_date.py  20483d2926df_adding_crm_numbers_to_orbits.py  2da64f61b409_foreign_key_fix.py  2ffa104367ee_revising_observation_model.py  3a02f50bc7aa_.py  548de58fffac_adding_lightcurve_model_based_on_array_.py  5961c1fadd12_adding_metric_models.py  6dd622918a0b_adding_bls_model.py  75cab39984bb_adding_not_null_constraints_on_frame_.py  7910ebee4ab2_bls_re_implementation.py  828a1343876c_array_model.py  85a99e8a16dd_.py  90c9fd1a4c11_adding_lightpoint_model.py  93ad664ff832_initializing_new_models.py  95672973dbdd_adding_spacecraft_ephemris.py  a494112e4f27_altering_meta_field_to_quality_field.py  a8f3bcff7790_initializing.py  aac242ac5bb4_making_camera_quaternion_model.py  baf937412836_adding_more_indices_on_lightpoints.py  be86fdf5cef3_adding_more_fields_to_bls.py  c4daf006804e_.py  c6e1baa7ce54_initializing_lcdb_models.py  ca0d6f4e1d49_updating_internal_telemetry_models.py  cb18609410b0_adding_fk_indices_on_frames.py  ce2cea6ecd58_initializing.py  d101c424c39e_updating_bls_model.py  d308eb3931f9_hotswap_of_observation_tables.py  d325d7d7687a_tag_refactor.py  db7da31008c0_initializing_timescaledb.py  e2ecdfc1a06f_adding_sector.py  e8b0eecf8359_creating_partition_catalog_tables.py  eee1e61ac19b_temporary_observation_table_for_jira_194.py  efb12c5fb79c_adding_best_orbit_lightcurve_table.py  f127fed968b3_bestlightcurvetable_revision.py
docs/: COVERAGE_ANALYSIS.md  requirements.txt
docs/source/: api.rst  conf.py  connecting.rst  index.rst  installation.rst  mermaid-themes-example.rst  models.rst  schema.rst
docs/source/cli/: cli.rst  creating_models.rst  main.rst
docs/source/db/: db.rst
docs/source/lightcurves/: lightcurves.rst
docs/source/managers/: managers.rst
docs/source/metrics/: metrics.rst
docs/source/util/: utils.rst
lightcurvedb/: __init__.py  exceptions.py
lightcurvedb/cli/: __init__.py  admin.py  apertures.py  base.py  bls.py  em2.py  frames.py  ingest.py  ingestion_cache.py  lightcurves.py  metrics.py  new_orbit.py  orbit.py  partitioning.py  plotting.py  qlp_data_types.py  quality_flags.py  query.py  spacecraft.py  types.py  utils.py
lightcurvedb/comparators/: types.py
lightcurvedb/core/: __init__.py  admin.py  base_model.py  collection.py  connection.py  constants.py  engines.py  fields.py  mixins.py  partitioning.py  psql_tables.py  quality_flags.py  sql.py  sqlfunc.py  tic8.py
lightcurvedb/core/datastructures/: blob.py  data_packers.py  lightpoint_collection.py  redblacktree.hpp
lightcurvedb/core/ingestors/: __init__.py  base.py  bls.py  cache.py  camera_quaternion.py  camera_quaternions.py  consumer.py  contexts.py  correction.py  em2.py  em2_array.py  em2_lightcurves.py  frame_ingestor.py  frames.py  jobs.py  lightcurve_arrays.py  lightcurve_ingestors.py  lightcurves.py  lightpoint.py  lightpoints.py  orbit_ingestor.py  orbits.py  processes.py  quality_flag_ingestors.py  spacecraft_ephemeris_ingestor.py  telemetry.py  temp_table.py
lightcurvedb/en_masse/: __init__.py  temp_table.py
lightcurvedb/experimental/: temp_table.py
lightcurvedb/io/: feeder.py
lightcurvedb/io/pipeline/: __init__.py  query_iteration.py  scope.py
lightcurvedb/io/procedures/: dump_lightpoints.sql  get_bestaperture_data.sql  get_lightcurve.sql  lengths.sql  procedure.py
lightcurvedb/legacy/: __init__.py  query.py  timecorrect.py
lightcurvedb/managers/: __init__.py  bestlightcurves.py  lightcurve_query.py  lightcurves.py  locking.py  manager.py  mass_upserts.py  sql_worker.py
lightcurvedb/models/: __init__.py  aperture.py  best_lightcurve.py  bls.py  camera_quaternion.py  frame.py  lightcurve.py  lightpoint.py  metrics.py  observations.py  orbit.py  spacecraft.py  table_track.py
lightcurvedb/reportings/: lightcurve_ingest_report.py
lightcurvedb/util/: cadence_mapping.py  constants.py  contexts.py  decorators.py  iter.py  lightpoint_util.py  logger.py  logging.py  merge.py  merging.py  plotting.py  tess.py  type_check.py  uri.py
public/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
public/_sources/: index.rst.txt
public/_static/: documentation_options.js
public/lightcurves/: lightcurves.html
public/managers/: managers.html
src/lightcurvedb/: __init__.py  exceptions.py
tests/: config.conf  conftest.py  constants.py  factories.py  fixtures.py  makeoverride  provision.py  ssh-config  strategies.py  test_alias.py  test_apertures.py  test_api.py  test_array_model.py  test_base_models.py  test_best_aperture.py  test_camera_quaternion.py  test_camera_quaternions.py  test_cli.py  test_cli_utils.py  test_contexts.py  test_core_connection.py  test_database_connection.py  test_dataset_alignment.py  test_dataset_relationships.py  test_datastructures.py  test_db_scope.py  test_frames.py  test_graph_size_simple.py  test_imports.py  test_instrument.py  test_interfaces.py  test_iter.py  test_legacy.py  test_lightcurves.py  test_lightpoint_collection.py  test_lightpoint_ingestion.py  test_lightpoints.py  test_manager.py  test_managers.py  test_merging.py  (+24 more)
tests/sample-data/: tess_properties.yaml
tests/strategies/: filesystems.py  ingestion.py  orm.py  pdo.py  tess.py  utils.py
(+100 files in other folders)
