[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lightcurvedb"]
exclude = []
namespaces = false

[project]
name = "lightcurvedb"
description = "SQLAlchemy models and APIs for storing lightcurve timeseries."
authors = [{name="William Fong", email="willfong@mit.edu"}]
readme = "README.rst"
dynamic = ["version"]

dependencies = [
    "sqlalchemy>=2.0",
    "click>=8.0",
    "psycopg[binary]>=3.1.19",
    "setuptools>69.5",
    "h5py>=3.1",
    "numpy>=1.12",
    "astropy>=6",
    "pandas>=2.2.0",
    "pgcopy>=1.6.0",
    "scipy>=1.13.0",
    "pyquaternion>=0.9.9",
    "tqdm>=4.66.4",
    "loguru>=0.7.2",
    "cachetools>=5.3.2",
    "packaging>=23.2",
    "tabulate>=0.9.0",
    "configurables @ git+ssh://git@tessgit.mit.edu/wcfong/configurables.git",

    "pyticdb @ git+ssh://git@tessgit.mit.edu/wcfong/pyticdb.git",
]


[tool.setuptools.dynamic]
version = {attr = "lightcurvedb.__version__"}


[project.urls]
Home = "https://tessgit.mit.edu/wcfong/lightcurve-database"


[project.scripts]
lcdb = 'lightcurvedb.cli:lcdbcli'


[project.optional-dependencies]
dev = [
    "black>=24.4",
    "hypothesis>=6",
    "hypothesis_fspaths",
    "mypy==1.10",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "pytest-xdist",
    "pytest>=8.2",
    "tox>=4",
    "tox-docker>=4.1.0",
]

[tool.mypy]
disable_error_code = "import-untyped"
plugins = "sqlalchemy.ext.mypy.plugin"


[tool.flake8]
max-line-length = 81

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
