[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "lightcurvedb"
version = "1.0.0-beta.1"  # Managed by python-semantic-release
description = "SQLAlchemy models and APIs for storing lightcurve timeseries."
authors = [{name="William Fong", email="willfong@mit.edu"}]
readme = "README.rst"

dependencies = [
    "sqlalchemy>=2.0",
    "click>=8.0",
    "psycopg[binary]>=3.1.19",
    "setuptools>69.5",
    "h5py>=3.1",
    "numpy>=1.12",
    "astropy>=6",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "pyquaternion>=0.9.9",
    "tqdm>=4.66.4",
    "loguru>=0.7.2",
    "cachetools>=5.3.2",
    "packaging>=23.2",
    "tabulate>=0.9.0",
    "configurables @ git+https://github.com/mit-kavli-institute/configurables.git",
    "pyticdb @ git+https://github.com/mit-kavli-institute/pyticdb.git",
]




[project.urls]
Home = "https://tessgit.mit.edu/wcfong/lightcurve-database"


[project.scripts]
lcdb = 'lightcurvedb.cli:lcdbcli'


[project.optional-dependencies]
dev = [
    "black>=24.4",
    "hypothesis>=6",
    "hypothesis_fspaths",
    "mypy==1.10",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "pytest-xdist",
    "pytest>=8.2",
    "pytest_postgresql",
    "pytest-timeout",
    "nox"
]

docs = [
    "sphinx",
    "sphinxcontrib-mermaid",
    "furo",
]

[tool.mypy]
disable_error_code = "import-untyped"
plugins = "sqlalchemy.ext.mypy.plugin"


[tool.flake8]
max-line-length = 81

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variable = ["src/lightcurvedb/__init__.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
commit_parser = "angular"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.branches.staging]
match = "staging"
prerelease_token = "beta"
prerelease = true

[tool.semantic_release.commit_parser_options]
allowed_types = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_types = ["feat"]
patch_types = ["fix", "perf", "refactor", "build", "chore", "ci", "docs", "style", "test"]
